Refactor for project needs